<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/appDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="applied date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/loanType"
            android:layout_below="@+id/appDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Loan Type"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/loanId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loanType"
            android:text="loan Id"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appAmount"
            android:layout_alignParentEnd="true"
            android:text="period"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/appAmount"
            android:layout_width="wrap_content"
            android:layout_below="@+id/appDate"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:text="Applied Amount"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll_agent_controls"
            android:visibility="gone"
            android:layout_below="@id/loanId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/agentStateTxv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="ok"
                android:textColor="@color/button"
                android:textSize="18sp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/acceptBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_admin_controls"
            android:layout_below="@id/loanId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center">

            <TextView
                android:id="@+id/adminStateTxv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/button"
                android:text="PENDING"
                android:textSize="18sp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/approveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approve"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/rejectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_controls"
            android:layout_below="@id/loanId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/userStateTxv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/button"
                android:text="PENDING"
                android:textSize="18sp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/inquiryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>