<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.InsuranceActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_color"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Insurance Application">

        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logout"
            android:padding="10dp"
            android:src="@drawable/ic_logout" />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/recentInsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_insurance_applications"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/noInsuranceHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/no_insurance_history"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentInsTitle" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/svRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentInsTitle"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/button"
        app:itemTextColor="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/manage_bottom_navigation_view_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>